<resources>
    <string name="app_name">Account</string>

    <!--nav menu-->
    <string name="nav_menu_home">Home</string>
    <string name="nav_menu_logout">Logout</string>
    <string name="nav_menu_delete">DeleteAll</string>
    <string name="nav_menu_query">Query</string>
    <string name="nav_menu_storage">Storage</string>
    <string name="nav_menu_category">Category</string>
    <string name="nav_menu_analysis">Analysis</string>
    <string name="nav_menu_private">Private</string>

    <!--Popup string-->
    <string name="dialog_warning_title">Warning</string>
    <string name="dialog_logout_msg">Do you want to logout?</string>
    <string name="dialog_delete_all_msg">Do you want to Delete All Data?</string>
    <string name="dialog_add_category">Do you want to add a category?</string>
    <string name="dialog_set_limit_money">Set limit money.</string>
    <string name="dialog_button_yes">Yes</string>
    <string name="dialog_button_add">Add</string>
    <string name="dialog_button_set">Set</string>
    <string name="dialog_button_no">No</string>
    <string name="dialog_button_update">Update</string>
    <string name="dialog_update_category">Please update the information</string>

    <!--Account Db-->
    <string name="db_username">Username</string>
    <string name="db_price">Price</string>
    <string name="db_comment">Comment</string>
    <string name="db_date">Date</string>
    <string name="db_add">Add</string>
    <string name="db_update">Update</string>

    <!--Menu string-->
    <string name="menu_export">Export</string>
    <string name="menu_import">Import</string>
    <string name="menu_share">Share</string>
    <string name="menu_manage">Manage</string>
    <string name="menu_visible">Visible</string>
    <string name="menu_importFile">importFile</string>

    <!--Button-->
    <string name="btn_query">Query</string>
    <string name="btn_delete">Delete</string>

    <!--Toast-->
    <string name="toast_finish_all">Please finish all information.</string>
    <string name="toast_failed_get_image">failed to get image.</string>
    <string name="toast_date_error">Data Error.</string>
    <string name="toast_file_no_exist">"The file don't exist !!!"</string>
    <string name="toast_import_num">"import Num = %s"</string>
    <string name="toast_login_error">account or password is error.</string>
    <string name="toast_add_category_first">Please add a category first.</string>
    <string name="toast_delete_db_first">Please delete the data in account first.</string>
    <string name="toast_input_is_null">Null input.</string>

    <!--Common-->
    <string name="not_contain">not</string>

</resources>
