<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_call"
            android:icon="@drawable/phone"
            android:title="Call"/>
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/category"
            android:title="@string/nav_menu_category"/>
        <item
            android:id="@+id/nav_storage"
            android:icon="@drawable/location"
            android:title="@string/nav_menu_storage"/>
        <item
            android:id="@+id/nav_query"
            android:icon="@drawable/query"
            android:title="@string/nav_menu_query"/>
        <item
            android:id="@+id/nav_delete"
            android:icon="@drawable/delete"
            android:title="@string/nav_menu_delete"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/nav_menu_logout"/>
    </group>

</menu>